--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,10 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 JWT_SECRET=
+
+GOOGLE_CLOUD_KEY_FILE=
+GOOGLE_CLOUD_PROJECT_ID=
+GOOGLE_CLOUD_STORAGE_BUCKET=
+GOOGLE_CLOUD_STORAGE_PATH_PREFIX=
+GOOGLE_CLOUD_STORAGE_API_URI=
+GOOGLE_CLOUD_STORAGE_API_ENDPOINT=
